Produzione/force-app/main/default/objects/Utente__c/Utente__c.object-meta.xml
<CustomObject>
    <label>Utente Custom</label>
    <nameField>
        <label>Nome Utente</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utenti Custom</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>