Produzione/force-app/main/default/objects/Utente__c/fields/Azienda_Permessi_Visualizzazione__c.field-meta.xml
<CustomField>
    <fullName>Azienda_Permessi_Visualizzazione__c</fullName>
    <description>Definisce quali raggruppamenti l&apos;utente manager può visualizzare</description>
    <inlineHelpText>Definisce quali raggruppamenti l&apos;utente manager può visualizzare</inlineHelpText>
    <label>Azienda Permessi Visualizzazione</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Aziende_Permessi_Visualizzazione</valueSetName>
    </valueSet>
</CustomField>