Produzione/force-app/main/default/objects/Utente__c/fields/Citta__c.field-meta.xml
<CustomField>
    <fullName>Citta__c</fullName>
    <description>Città di riferimento dealer</description>
    <inlineHelpText>Città di riferimento dealer</inlineHelpText>
    <label>Città</label>
    <type>TextArea</type>
</CustomField>