Produzione/force-app/main/default/objects/Utente__c/fields/CL_Anzianita__c.field-meta.xml
<CustomField>
    <fullName>CL_Anzianita__c</fullName>
    <description>Classe di anzienità</description>
    <inlineHelpText>Classe di anzienità</inlineHelpText>
    <label>CL Anzianità</label>
    <type>TextArea</type>
</CustomField>