Produzione/force-app/main/default/objects/Utente__c/fields/CL_Vendite__c.field-meta.xml
<CustomField>
    <fullName>CL_Vendite__c</fullName>
    <description>Classe di vendite</description>
    <inlineHelpText>Classe di vendite</inlineHelpText>
    <label>CL Vendite</label>
    <type>TextArea</type>
</CustomField>