Produzione/force-app/main/default/objects/Utente__c/fields/COD_CASA__c.field-meta.xml
<CustomField>
    <fullName>COD_CASA__c</fullName>
    <description>Codice della casa auto</description>
    <inlineHelpText>Codice della casa auto</inlineHelpText>
    <label>COD CASA</label>
    <type>TextArea</type>
</CustomField>