Produzione/force-app/main/default/objects/Utente__c/fields/Indirizzo_Sede_Legale__c.field-meta.xml
<CustomField>
    <fullName>Indirizzo_Sede_Legale__c</fullName>
    <description>Indirizzo completo della sede legale</description>
    <inlineHelpText>Indirizzo completo della sede legale</inlineHelpText>
    <label>Indirizzo Sede Legale</label>
    <type>TextArea</type>
</CustomField>