Produzione/force-app/main/default/objects/Utente__c/fields/Lexus__c.field-meta.xml
<CustomField>
    <fullName>Lexus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se settato questo utente è un Dealer associato a Lexus</description>
    <inlineHelpText>Se settato questo utente è un Dealer associato a Lexus</inlineHelpText>
    <label>Lexus</label>
    <type>Checkbox</type>
</CustomField>