Produzione/force-app/main/default/objects/Utente__c/fields/Marchi__c.field-meta.xml
<CustomField>
    <fullName>Marchi__c</fullName>
    <label>Marchi</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Toyota</fullName>
            </value>
            <value>
                <fullName>Lexus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>