Produzione/force-app/main/default/objects/Utente__c/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <description>Nome dell&apos;utente</description>
    <inlineHelpText>Nome dell&apos;utente</inlineHelpText>
    <label>Nome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>