Produzione/force-app/main/default/objects/Utente__c/fields/Nome_Commerciale__c.field-meta.xml
<CustomField>
    <fullName>Nome_Commerciale__c</fullName>
    <description>Nome commerciale per visualizzazione nelle liste dei dealer</description>
    <inlineHelpText>Nome commerciale per visualizzazione nelle liste dei dealer</inlineHelpText>
    <label>Nome Commerciale</label>
    <type>TextArea</type>
</CustomField>