Produzione/force-app/main/default/objects/Utente__c/fields/PIVA__c.field-meta.xml
<CustomField>
    <fullName>PIVA__c</fullName>
    <description>Partita IVA aziendale</description>
    <inlineHelpText>Partita IVA aziendale</inlineHelpText>
    <label>PIVA</label>
    <type>TextArea</type>
</CustomField>