Produzione/force-app/main/default/objects/Utente__c/fields/Provincia__c.field-meta.xml
<CustomField>
    <fullName>Provincia__c</fullName>
    <description>Provincia di riferimento</description>
    <inlineHelpText>Provincia di riferimento</inlineHelpText>
    <label>Provincia</label>
    <length>128</length>
    <type>Text</type>
</CustomField>