Produzione/force-app/main/default/objects/Utente__c/fields/Ragione_Sociale__c.field-meta.xml
<CustomField>
    <fullName>Ragione_Sociale__c</fullName>
    <description>Ragione sociale dell&apos;azienda collegata</description>
    <inlineHelpText>Ragione sociale dell&apos;azienda collegata</inlineHelpText>
    <label>Ragione Sociale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>