Produzione/force-app/main/default/objects/Utente__c/fields/Tipologia__c.field-meta.xml
<CustomField>
    <fullName>Tipologia__c</fullName>
    <label>Tipologia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>