Produzione/force-app/main/default/objects/Utente__c/fields/Utente_Demo__c.field-meta.xml
<CustomField>
    <fullName>Utente_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se selezionato viene escluso da alcune sezioni</description>
    <inlineHelpText>Se selezionato viene escluso da alcune sezioni</inlineHelpText>
    <label>Utente Demo</label>
    <type>Checkbox</type>
</CustomField>