Produzione/force-app/main/default/objects/Utente__c/fields/Utente_Master__c.field-meta.xml
<CustomField>
    <fullName>Utente_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Se impostato l&apos;utente corrente agirà (in lettura) come se fosse l&apos;utente master</description>
    <inlineHelpText>Se impostato l&apos;utente corrente agirà (in lettura) come se fosse l&apos;utente master</inlineHelpText>
    <label>Utente Master</label>
    <referenceTo>Utente__c</referenceTo>
    <relationshipLabel>Utenti Master</relationshipLabel>
    <relationshipName>Utenti_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>